--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -108,6 +108,9 @@
   "component_Settings_reset_password": {
     "message": "Reset password for current account"
   },
+  "component_Settings_forget_saved_passwords": {
+    "message": "Require password for future transactions"
+  },
   "component_Settings_terms_and_conditions": {
     "message": "Terms & Conditions"
   },
