--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -362,7 +362,7 @@
     "message": "The amount+fee exceed your maximum sendable amount"
   },
   "view_SendToken_total_fee": {
-    "message": "Total fee: "
+    "message": "Costs: "
   },
   "view_SendToken_all_in": {
     "message": "All in"
@@ -374,7 +374,7 @@
     "message": "Decrease the tip by 1%"
   },
   "view_SendToken_tip": {
-    "message": "Tip of $percent$% included in fee",
+    "message": "Tip of $percent$% included in costs",
     "placeholders": {
       "percent": {
         "content": "$1"
@@ -406,7 +406,7 @@
     "message": "Reset Password"
   },
   "view_ReviewTransaction_total": {
-    "message": "Total costs: "
+    "message": "Total: "
   },
   "view_ReviewTransaction_showDetails": {
     "message": "Show details"
@@ -415,13 +415,13 @@
     "message": "Hide details"
   },
   "view_ReviewTransaction_fee": {
-    "message": "Minimum Fee:"
+    "message": "Fee:"
   },
   "view_ReviewTransaction_tip": {
     "message": "Tip:"
   },
   "view_ReviewTransaction_totalFee": {
-    "message": "Total Fee:"
+    "message": "Costs:"
   },
   "view_ReviewTransaction_amount": {
     "message": "Amount:"
