--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -27,7 +27,22 @@
     "message": "Paste from clipboard"
   },
   "component_Balance_label": {
-    "message": "Balance: "
+    "message": "Total Balance: "
+  },
+  "component_Balance_showBalanceBreakdown": {
+    "message": "Show balance breakdown"
+  },
+  "component_Balance_hideBalanceBreakdown": {
+    "message": "Hide balance breakdown"
+  },
+  "component_Balance_balance_free": {
+    "message": "Free Balance: "
+  },
+  "component_Balance_balance_locked": {
+    "message": "Locked Balance: "
+  },
+  "component_Balance_balance_bonded": {
+    "message": "Bonded Balance: "
   },
   "component_AccountSlide_rename": {
     "message": "Rename"
