chore: use em-dash in second place for consistency
Co-authored-by: Tom Adler <me@arty.name>

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -189,7 +189,7 @@
     "message": "Keep it safe, so you don't lose\nyour assets"
   },
   "view_Warning_CTA": {
-    "message": "I understand this --- go to the Phrase"
+    "message": "I understand this – go to the Phrase"
   },
   "view_SaveBackupPhrase_heading": {
     "message": "My Backup Phrase"
