SK-189 Fix all bugs not caused by rounding errors

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -374,7 +374,7 @@
     "message": "The amount entered exceeds your maximum sendable amount"
   },
   "view_SendToken_fee_large": {
-    "message": "The amount+fee exceed your maximum sendable amount"
+    "message": "The amount+costs exceed your maximum sendable amount"
   },
   "view_SendToken_total_fee": {
     "message": "Costs: "
