SK-257: set extension description

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -6,7 +6,7 @@
     "message": "Sporran"
   },
   "manifest_description": {
-    "message": "TODO"
+    "message": "Sporran. The wallet for your KILTs and credentials."
   },
   "common_action_back": {
     "message": "Back"
