--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -649,5 +649,29 @@
   },
   "view_ExistentialWarning_confirm": {
     "message": "Confirm"
+  },
+  "view_UnlockVestedFunds_heading": {
+    "message": "Update Balance"
+  },
+  "view_UnlockVestedFunds_subline": {
+    "message": "Update transaction for releasing unlocked coins"
+  },
+  "view_UnlockVestedFunds_explanation": {
+    "message": "Your unlocked vesting funds need to be manually released. Sign this transaction which involves a fee to have them available as free balance."
+  },
+  "view_UnlockVestedFunds_reset": {
+    "message": "Reset Password"
+  },
+  "view_UnlockVestedFunds_password": {
+    "message": "Sign with Password:"
+  },
+  "view_UnlockVestedFunds_remember": {
+    "message": "Remember my password for the next 15 minutes"
+  },
+  "view_UpdateVestedFunds_password_incorrect": {
+    "message": "The password is incorrect"
+  },
+  "view_UnlockVestedFunds_CTA": {
+    "message": "Update Balance"
   }
 }
