--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -373,6 +373,9 @@
   "view_SendToken_amount_large": {
     "message": "The amount entered exceeds your maximum sendable amount"
   },
+  "view_SendToken_error_existential_recepient": {
+    "message": "The recipient’s account cannot hold an amount smaller than the existential deposit"
+  },
   "view_SendToken_fee_large": {
     "message": "The amount+costs exceed your maximum sendable amount"
   },
