SK-237: Toggle for website access - hints

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -629,6 +629,12 @@
   "view_ExternalAccess_small": {
     "message": "Website access"
   },
+  "view_ExternalAccess_denied": {
+    "message": "denied"
+  },
+  "view_ExternalAccess_allowed": {
+    "message": "allowed"
+  },
   "view_ExternalAccess_back": {
     "message": "Back to my accounts"
   }
