--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -642,7 +642,7 @@
     "message": "Your account's remaining balance will be set to zero"
   },
   "view_ExistentialWarning_warning": {
-    "message": "This transaction would leave your balance below the existential deposit. Therefore the non-bonded balance of your account will be set to zero. The rest of your free balance will be added as a tip. Confirm to proceed with this transaction anyway."
+    "message": "This transaction would leave your balance below the existential deposit. Therefore the balance of your account will be set to zero. The rest of your balance will be added as a tip. Confirm to proceed with this transaction anyway."
   },
   "view_ExistentialWarning_confirm": {
     "message": "Confirm"
