SK-134: Error cases for outgoing transaction

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -173,6 +173,9 @@
   "component_TxStatusModal_success": {
     "message": "Your transaction was successfully sent"
   },
+  "component_TxStatusModal_error": {
+    "message": "Your transaction has failed"
+  },
   "view_Welcome_heading": {
     "message": "Welcome to your Sporran"
   },
