--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -672,6 +672,6 @@
     "message": "Confirm"
   },
   "view_GenericError_message": {
-    "message": "An error occurred. Please try again. For help please reach out for our support."
+    "message": "An error occurred. Please try again. For help please contact <a href='mailto:support@sporran.org'>support@sporran.org</a>."
   }
 }
